--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,24 @@
-/* Common styles for larger screens */
 body {
-  font-family: Arial, sans-serif;
-  text-align: center;
-  margin-top: 100px;
-  background-color: #f5f5f5;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-h1 {
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin-bottom: 20px;
-  color: #333;
-}
-
-#countdown {
-  font-size: 70px;
-  font-weight: bold;
+.countdown {
+  display: flex;
+  justify-content: space-around;
+  width: 40%;
+  font-size: 5vw;
   color: #FF6347;
-  margin-bottom: 50px;
 }
 
-/* Responsive styles for smaller screens */
-@media screen and (max-width: 768px) {
-  #countdown {
-    font-size: 60px; /* Increase font size for visibility on smaller screens */
-  }
-}
-
-/* Additional responsive styles for even smaller screens */
-@media screen and (max-width: 480px) {
-  #countdown {
-    font-size: 80px; /* Further increase font size for very small screens */
-  }
-
-  /* Display countdown in a different format for smaller screens */
-  #countdown::before {
-    content: '';
-    display: block;
-    font-size: 60px; /* Font size for individual countdown units */
-    margin-bottom: 10px; /* Add some space between units */
-  }
-
-  #countdown::after {
-    content: 'D\nH\nM\nS'; /* Display individual units with line breaks */
-    display: block;
-    font-size: 60px; /* Font size for the labels */
-    line-height: 1.2; /* Adjust line height for better readability */
+@media (max-width: 768px) {
+  .countdown {
+    align-items: center;
+    flex-direction: column;
+    font-size: 10vw;
   }
 }
