--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   align-items: center;
   height: 100vh;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  position: relative;
 }
 
 #year {
