--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,9 @@ body {
   }
 
   #year {
-    transform: rotate(-90deg);
+    font-size: 50vh; /* Adjust the font size for smaller devices */
+    transform: translate(-50%, -50%) rotate(-90deg); /* Rotate and center the text */
+    top: 50%;
+    left: 50%;
   }
 }
