--- a/styles.css
+++ b/styles.css
@@ -49,4 +49,9 @@ body {
     top: 50%;
     left: 50%;
   }
+
+  @media (min-width: 1024px) {
+  .countdown {
+    justify-content: space-around;
+  }
 }
