--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,15 @@ body {
 
 .countdown {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 40%;
   font-size: 5vw;
   color: #FF6347;
+}
+
+.countdown > div {
+  text-align: center;
+  width: 22%; /* Adjusted width for each countdown element */
 }
 
 @media (max-width: 768px) {
