--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ body {
 }
 
 .countdown {
-  padding: 1%;
   display: flex;
   justify-content: space-between;
   font-size: 5vw;
@@ -37,6 +36,7 @@ body {
 }
 
 .countdown > div {
+  padding: 0 10px;
   text-align: center;
 }
 
