--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
 .countdown {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 5vw;
   color: #FF6347;
 }
@@ -38,6 +39,11 @@ body {
 .countdown > div {
   padding: 0 10px;
   text-align: center;
+  font-size: inherit;
+}
+
+.countdown-labels {
+  font-size: 3vw;
 }
 
 @media (max-width: 768px) {
