--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 .countdown {
   display: flex;
   justify-content: space-between;
-  font-size: 5vw;
+  font-size: 10vw;
   color: #FF6347;
 }
 
@@ -44,6 +44,7 @@ body {
   display: flex;
   padding: 0 0 25px;
   font-size: 25px;
+  text-align: center;
 }
 
 @media (max-width: 768px) {
