--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
   padding: 0 25px;
   font-size: 3vw;
   text-align: center;
+  justify-content: space-evenly;
 }
 
 @media (max-width: 768px) {
